--- a/incubator/nginx/templates/deployment.yaml
+++ b/incubator/nginx/templates/deployment.yaml
@@ -32,12 +32,14 @@ spec:
             port: http
           initialDelaySeconds: 30
           timeoutSeconds: 5
+          failureThreshold: 6
         readinessProbe:
           httpGet:
             path: /
             port: http
           initialDelaySeconds: 5
-          timeoutSeconds: 1
+          timeoutSeconds: 3
+          periodSeconds: 5
         volumeMounts:
         - name: nginx-data
           mountPath: /bitnami/nginx
