--- a/incubator/jenkins/templates/deployment.yaml
+++ b/incubator/jenkins/templates/deployment.yaml
@@ -34,14 +34,16 @@ spec:
           httpGet:
             path: /
             port: http
-          initialDelaySeconds: 120
+          initialDelaySeconds: 180
           timeoutSeconds: 5
+          failureThreshold: 6
         readinessProbe:
           httpGet:
             path: /
             port: http
-          initialDelaySeconds: 5
-          timeoutSeconds: 1
+          initialDelaySeconds: 30
+          timeoutSeconds: 3
+          periodSeconds: 5
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
