--- a/incubator/parse/templates/dashboard-deployment.yaml
+++ b/incubator/parse/templates/dashboard-deployment.yaml
@@ -50,12 +50,14 @@ spec:
             port: dashboard-http
           initialDelaySeconds: 120
           timeoutSeconds: 5
+          failureThreshold: 6
         readinessProbe:
           httpGet:
             path: /
             port: dashboard-http
-          initialDelaySeconds: 5
-          timeoutSeconds: 1
+          initialDelaySeconds: 30
+          timeoutSeconds: 3
+          periodSeconds: 5
         resources:
 {{ toYaml .Values.parseDashboard.resources | indent 10 }}
         volumeMounts:
