--- a/incubator/sugarcrm/templates/deployment.yaml
+++ b/incubator/sugarcrm/templates/deployment.yaml
@@ -61,16 +61,24 @@ spec:
           containerPort: 443
         livenessProbe:
           httpGet:
-            path: /
+            path: /index.php
             port: http
-          initialDelaySeconds: 120
+            httpHeaders:
+            - name: Host
+              value: {{ include "host" . | quote }}
+          initialDelaySeconds: 300
           timeoutSeconds: 5
+          failureThreshold: 6
         readinessProbe:
           httpGet:
-            path: /
+            path: /index.php
             port: http
-          initialDelaySeconds: 30
-          timeoutSeconds: 1
+            httpHeaders:
+            - name: Host
+              value: {{ include "host" . | quote }}
+          initialDelaySeconds: 60
+          timeoutSeconds: 3
+          periodSeconds: 5
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
