--- a/incubator/tomcat/templates/deployment.yaml
+++ b/incubator/tomcat/templates/deployment.yaml
@@ -34,12 +34,14 @@ spec:
             port: http
           initialDelaySeconds: 120
           timeoutSeconds: 5
+          failureThreshold: 6
         readinessProbe:
           httpGet:
             path: /
             port: http
           initialDelaySeconds: 30
-          timeoutSeconds: 1
+          timeoutSeconds: 3
+          periodSeconds: 51
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
