--- a/incubator/wildfly/templates/deployment.yaml
+++ b/incubator/wildfly/templates/deployment.yaml
@@ -36,12 +36,14 @@ spec:
             port: http
           initialDelaySeconds: 120
           timeoutSeconds: 5
+          failureThreshold: 6
         readinessProbe:
           httpGet:
             path: /
             port: http
           initialDelaySeconds: 30
-          timeoutSeconds: 1
+          timeoutSeconds: 3
+          periodSeconds: 5
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
