Rename chart to tensorflow-inception, add persistance and other fixes

--- a/incubator/tensorflow-inception/templates/deployment.yaml
+++ b/incubator/tensorflow-inception/templates/deployment.yaml
@@ -24,8 +24,17 @@ spec:
           failureThreshold: 6
         volumeMounts:
         - name: seed
-          mountPath: "/bitnami/inception-data"
+          mountPath: "/bitnami/model-data"
+        - name: data
+          mountPath: /bitnami/tensorflow-serving
       volumes:
       - name: seed
         persistentVolumeClaim:
           claimName: {{ template "fullname" . }}-seed-inception
+      - name: data
+      {{- if .Values.persistence.enabled }}
+        persistentVolumeClaim:
+          claimName: {{ template "fullname" . }}
+      {{- else }}
+        emptyDir: {}
+      {{- end -}}
