Add missing labels

--- a/incubator/tensorflow-inception/templates/deployment.yaml
+++ b/incubator/tensorflow-inception/templates/deployment.yaml
@@ -2,6 +2,11 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: {{ template "fullname" . }}
+  labels:
+    app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 spec:
   replicas: 1
   template:
