--- a/incubator/tensorflow-inception/templates/inception-pvc.yaml
+++ b/incubator/tensorflow-inception/templates/inception-pvc.yaml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ template "fullname" . }}-seed-inception
+  labels:
+    app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 spec:
   accessModes:
     - ReadWriteOnce
