--- a/incubator/tensorflow-inception/values.yaml
+++ b/incubator/tensorflow-inception/values.yaml
@@ -2,20 +2,20 @@
 ## ref: https://hub.docker.com/r/bitnami/tensorflow-serving/tags/
 ##
 server:
-  image: tompizmor/tensorflow-serving:latest
+  image: bitnami/tensorflow-serving:0.5.1-r0
   port: 9000
 
-## TensorFlow Serving Client image version
-## ref: https://hub.docker.com/r/bitnami/tensorflow-serving-client/tags/
+## TensorFlow Inception image version
+## ref: https://hub.docker.com/r/bitnami/tensorflow-inception/tags/
 ##
 client:
-  image: tompizmor/tensorflow-serving-client:latest
+  image: bitnami/tensorflow-inception:0.5.1-r0
 
 ## Specify a imagePullPolicy
 ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
-# imagePullPolicy:
+imagePullPolicy: IfNotPresent
 
 ## Enable persistence using Persistent Volume Claims
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
