Update inception-job command style and change chart name

--- a/incubator/tensorflow-inception/Chart.yaml
+++ b/incubator/tensorflow-inception/Chart.yaml
@@ -1,4 +1,4 @@
-name: tensorflow-serving
+name: tensorflow-inception
 version: 0.0.1
 appVersion: 0.5.1
 description: Open-source software library for serving machine learning models
@@ -12,7 +12,7 @@ keywords:
 home: https://tensorflow.github.io/serving/
 sources:
 - https://github.com/bitnami/tensorflow-serving
-- https://github.com/bitnami/tensorflow-serving-client
+- https://github.com/bitnami/tensorflow-inception
 maintainers:
 - email: containers@bitnami.com
   name: Bitnami
