--- a/incubator/tensorflow-inception/templates/inception-job.yaml
+++ b/incubator/tensorflow-inception/templates/inception-job.yaml
@@ -15,12 +15,15 @@ spec:
       containers:
       - name: seed
         image: {{ .Values.client.image }}
-        command: ["/bin/sh"]
-        args: ["-c", "curl -o /seed/inception-v3-2016-03-01.tar.gz http://download.tensorflow.org/models/image/imagenet/inception-v3-2016-03-01.tar.gz && \
-                      cd /seed/ && tar -xzf inception-v3-2016-03-01.tar.gz && \
-                      rm inception-v3-2016-03-01.tar.gz && \
-                      inception_saved_model --checkpoint_dir=/seed/inception-v3 --output_dir=/seed/ && \
-                      rm -rf inception-v3"]
+        command:
+          - "/bin/sh"
+          - "-c"
+          - |
+            curl -o /seed/inception-v3-2016-03-01.tar.gz http://download.tensorflow.org/models/image/imagenet/inception-v3-2016-03-01.tar.gz
+            cd /seed/ && tar -xzf inception-v3-2016-03-01.tar.gz
+            rm inception-v3-2016-03-01.tar.gz
+            inception_saved_model --checkpoint_dir=/seed/inception-v3 --output_dir=/seed/
+            rm -rf inception-v3
         volumeMounts:
         - name: seed
           mountPath: /seed
