--- a/incubator/tomcat/templates/deployment.yaml
+++ b/incubator/tomcat/templates/deployment.yaml
@@ -14,6 +14,23 @@ spec:
         app: {{ template "fullname" . }}
     spec:
       containers:
+      {{- if .Values.sidecar }}
+      {{- range $key, $sidecar := .Values.sidecar }}
+      - name: {{ $sidecar.name }}
+        image: {{ $sidecar.image }}:{{ $sidecar.tag }}
+        imagePullPolicy: {{ $sidecar.imagePullPolicy }}
+        lifecycle:
+          postStart:
+            exec:
+              command:
+                - "cp"
+                - "{{ $sidecar.imageWarFileLoc }}"
+                - "/app{{ $key }}"
+        volumeMounts:
+        - mountPath: /app{{ $key }}
+          name: tomcat-data
+      {{- end }}
+      {{- end }}
       - name: {{ template "fullname" . }}
         image: "{{ .Values.image }}"
         imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
