--- a/incubator/tomcat/templates/deployment.yaml
+++ b/incubator/tomcat/templates/deployment.yaml
@@ -19,13 +19,13 @@ spec:
       - name: {{ $sidecar.name }}
         image: {{ $sidecar.image }}:{{ $sidecar.tag }}
         imagePullPolicy: {{ $sidecar.imagePullPolicy }}
+        {{-if $sidecar.command }}
+        command: {{ $sidecar.command }}
+        {{- end }}
         lifecycle:
           postStart:
             exec:
-              command:
-                - "cp"
-                - "{{ $sidecar.imageWarFileLoc }}"
-                - "/app{{ $key }}"
+              command: ["cp", "{{ $sidecar.imageWarFileLoc }}", "/app{{ $key }}"]
         volumeMounts:
         - mountPath: /app{{ $key }}
           name: {{ $.Values.webappsVolume.name }}
