--- a/incubator/tomcat/templates/deployment.yaml
+++ b/incubator/tomcat/templates/deployment.yaml
@@ -14,22 +14,8 @@ spec:
         app: {{ template "fullname" . }}
     spec:
       containers:
-      {{- if .Values.sidecar }}
-      {{- range $key, $sidecar := .Values.sidecar }}
-      - name: {{ $sidecar.name }}
-        image: {{ $sidecar.image }}:{{ $sidecar.tag }}
-        imagePullPolicy: {{ $sidecar.imagePullPolicy }}
-        {{- if $sidecar.command }}
-        command: {{ $sidecar.command }}
-        {{- end }}
-        lifecycle:
-          postStart:
-            exec:
-              command: ["cp", "{{ $sidecar.imageWarFileLoc }}", "/app{{ $key }}/{{ $sidecar.imageWarDest }}"]
-        volumeMounts:
-        - mountPath: /app{{ $key }}
-          name: {{ $.Values.webappsVolume.name }}
-      {{- end }}
+      {{- if .Values.sidecarContainers }}
+{{ toYaml .Values.sidecarContainers }}
       {{- end }}
       - name: {{ template "fullname" . }}
         image: "{{ .Values.image }}"
@@ -75,6 +61,21 @@ spec:
         - name: test-mount
           mountPath: /bitnami/tomcat/conf/req.yaml
           subPath: requirements.yaml
+      {{- if .Values.initContainers }}
+      initContainers:
+      {{- range $key, $container := .Values.initContainers }}
+      - name: {{ $container.name }}
+        image: {{ $container.image }}:{{ $container.tag }}
+        imagePullPolicy: {{ $container.imagePullPolicy }}
+        {{- if $container.command }}
+        command: {{ $container.command }}
+        {{- end }}
+        {{- if $container.volumeMounts }}
+        volumeMounts:
+{{ toYaml $container.volumeMounts}}
+        {{- end }}
+      {{- end }}
+      {{- end }}
       volumes:
       - name: {{ .Values.webappsVolume.name }}
       {{- if .Values.persistence.enabled }}
@@ -84,5 +85,5 @@ spec:
         emptyDir: {}
       {{- end }}
       {{- if .Values.additionalVolumes }}
-{{ toYaml .values.additionalVolumes | indent 6 }}
+{{ toYaml .Values.additionalVolumes | indent 6 }}
       {{- end }}
