--- a/incubator/elasticsearch/templates/data-statefulset.yaml
+++ b/incubator/elasticsearch/templates/data-statefulset.yaml
@@ -1,53 +1,59 @@
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
-  name: "{{ template "fullname" . }}"
+  name: "{{ template "fullname" . }}-data"
   labels:
     app: "{{ template "name" . }}"
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    component: "data"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  serviceName: "{{ template "fullname" . }}"
-  replicas: {{ .Values.replicas }}
+  serviceName: "{{ template "fullname" . }}-data"
+  replicas: {{ .Values.node.data.replicas }}
   template:
     metadata:
       labels:
         app: "{{ template "name" . }}"
+        component: "data"
         release: "{{ .Release.Name }}"
     spec:
-      serviceAccountName: "{{ .Values.serviceAccountName }}"
+      serviceAccountName: "{{ .Values.cluster.serviceAccountName }}"
       initContainers:
       - name: sysctl
-        image: "{{ .Values.image }}"
-        imagePullPolicy: "{{ .Values.imagePullPolicy }}"
+        image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        imagePullPolicy: "{{ .Values.image.pullPolicy }}"
         command: ["sysctl", "-w", "vm.max_map_count=262144"]
         securityContext:
           privileged: true
       containers:
       - name: "{{ template "fullname" . }}"
-        image: "{{ .Values.image }}"
-        imagePullPolicy: "{{ .Values.imagePullPolicy }}"
+        image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        imagePullPolicy: "{{ .Values.image.pullPolicy }}"
         env:
         - name: SERVICE
           value: "{{ template "fullname" . }}"
         - name: KUBERNETES_NAMESPACE
           value: "{{ .Release.Namespace }}"
+        - name: NODE_MASTER
+          value: "false"
+        - name: NODE_DATA
+          value: "true"
         - name: ELASTICSEARCH_CLUSTER_NAME
-          value: "{{ .Values.elasticsearchClusterName }}"
+          value: "{{ .Values.cluster.name }}"
         - name: ELASTICSEARCH_PORT_NUMBER
-          value: "{{ .Values.elasticsearchPortNumber }}"
+          value: "{{ .Values.service.port.http }}"
         - name: ELASTICSEARCH_NODE_PORT_NUMBER
-          value: "{{ .Values.elasticsearchNodePortNumber }}"
+          value: "{{ .Values.service.port.transport }}"
         - name: ELASTICSEARCH_PLUGINS
-          value: "{{ .Values.elasticsearchPlugins }}"
+          value: "{{ .Values.cluster.plugins }}"
         - name: ES_JAVA_OPTS
-          value: "-Djava.net.preferIPv4Stack=true -Xms{{ .Values.elasticsearchHeapSize }} -Xmx{{ .Values.elasticsearchHeapSize }}"
+          value: "-Djava.net.preferIPv4Stack=true -Xms{{ .Values.node.data.heapSize }} -Xmx{{ .Values.node.data.heapSize }}"
         ports:
         - name: "http"
-          containerPort: {{ .Values.elasticsearchPortNumber }}
+          containerPort: {{ .Values.service.port.http }}
         - name: transport
-          containerPort: {{ .Values.elasticsearchNodePortNumber }}
+          containerPort: {{ .Values.service.port.transport }}
         livenessProbe:
           httpGet:
             path: /_cluster/health?local=true
@@ -59,7 +65,7 @@ spec:
             port: "http"
           initialDelaySeconds: 5
         resources:
-{{ toYaml .Values.resources | indent 10 }}
+{{ toYaml .Values.node.data.resources | indent 10 }}
         volumeMounts:
         - mountPath: /bitnami/elasticsearch/conf/elasticsearch_custom.yml
           name: "config"
@@ -70,27 +76,27 @@ spec:
       - name: "config"
         configMap:
           name: "{{ template "fullname" . }}"
-{{- if .Values.persistence.enabled }}
+{{- if .Values.node.data.persistence.enabled }}
   volumeClaimTemplates:
   - metadata:
       name: "data"
-{{- if .Values.persistence.annotations }}
+{{- if .Values.node.data.persistence.annotations }}
       annotations:
-{{ toYaml .Values.persistence.annotations | indent 6 }}
+{{ toYaml .Values.node.data.persistence.annotations | indent 6 }}
 {{- end }}
     spec:
       accessModes:
-{{ toYaml .Values.persistence.accessModes | indent 6 }}
-{{- if .Values.persistence.storageClass }}
-{{- if (eq "-" .Values.persistence.storageClass) }}
+{{ toYaml .Values.node.data.persistence.accessModes | indent 6 }}
+{{- if .Values.node.data.persistence.storageClass }}
+{{- if (eq "-" .Values.node.data.persistence.storageClass) }}
       storageClassName: ""
 {{- else }}
-      storageClassName: "{{ .Values.persistence.storageClass }}"
+      storageClassName: "{{ .Values.node.data.persistence.storageClass }}"
 {{- end }}
 {{- end }}
       resources:
         requests:
-          storage: "{{ .Values.persistence.size }}"
+          storage: "{{ .Values.node.data.persistence.size }}"
 {{- else }}
       - name: "data"
         emptyDir: {}
