--- a/incubator/tomcat/values.yaml
+++ b/incubator/tomcat/values.yaml
@@ -18,6 +18,11 @@ tomcatUsername: user
 ##
 # tomcatPassword:
 
+## Expose management services
+## ref: https://github.com/bitnami/charts/tree/master/incubator/tomcat#configuration
+##
+allowRemoteManagement: false
+
 ## Kubernetes configuration
 ## For minikube, set this to NodePort, elsewhere use LoadBalancer
 ##
